nodejs-mysql-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: application-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: application-db
    spec:
      containers:
      - name: wapl-shop
        image: stonehye/sample-app
        command: ["npm", "start"]
        ports:
        - name: nodejs-port
          # valueFrom:
          #   configMapRef:
          #     name: waplshop-configmap
          #     key: PORT
          containerPort: 3000
