mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: waplshop
spec:
  type: NodePort 
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30694
  selector:
    app: mysql
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql
  namespace: waplshop
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      restartPolicy: Always
      containers:
      - name: mysql
        image: mysql
        # imagePullPolicy: Never
        resources:
          limits:
            memory: 6Gi
            cpu: "5"
          requests:
            memory: 4Gi
            cpu: "4"
        ports:
          - containerPort: 3306
            name: mysql-port
        volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
      nodeSelector:
        kubernetes.io/hostname: tmax-hk
