nodejs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-db-service
spec:
  ports:
  - port: 3000
    protocol: TCP
    nodePort: 30001
  selector:
    app: application-db
  type: NodePort
