waplshop-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: waplshop-app-service
  namespace: waplshop # Helm Packaging
spec:
  ports:
  - port: 3000
    protocol: TCP
    nodePort: 31486
  selector:
    app: application
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waplshop-deployment
  namespace: waplshop # Helm Packaging
spec:
  selector:
    matchLabels:
      app: application
  replicas: 3
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
      - name: wapl-shop
        image: stonehye/sample-app:latest
        imagePullPolicy: Never # TODO: image 가져오기 정책 수정
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.5"
        ports:
        - name: nodejs-port
          containerPort: 3000 # TODO: Helm Packaging
