ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sampleapp-ingress
  namespace: waplshop
spec:
  rules:
  - http:
      paths:
        - path: /waplshop
          backend:
            serviceName: nodejs-db-service
            servicePort: 3000
